test/sema/struct_return.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
}

struct S2 {
}

fn foo(s: S) -> S {
    return S{};
}

fn bar(s: S) -> S {
    return S2{};
    // CHECK: [[# @LINE - 1 ]]:12: error: unexpected return type
}

fn main() -> void {
}

